# disksun

./: Cargo.toml  README.md
.github/workflows/: release.yml
contrib/: disksun-launch.sh  disksun.desktop  install-desktop.sh
packaging/: get-disksun.sh  install.sh
src/: main.rs
