[package]
name = "disksun"
version = "0.1.0"
edition = "2021"
description = "interactive sunburst disk-usage viewer"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/zoraster-org/disksun"
homepage = "https://github.com/zoraster-org/disksun"
authors = ["Joshua Liu <100771942+zoraster-org@users.noreply.github.com>"]
keywords = ["disk", "usage", "gui", "sunburst"]
categories = ["visualization", "filesystem"]

# ---- cargo-deb ------------------------------------------------------------
# Debian/Ubuntu packaging metadata. Build with:
#   cargo deb --target <TARGET> --no-build --no-strip
# Output: target/<TARGET>/debian/*.deb
[package.metadata.deb]
maintainer = "Joshua Liu <100771942+zoraster-org@users.noreply.github.com>"
copyright = "2026, Joshua Liu <100771942+zoraster-org@users.noreply.github.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
interactive pie / sunburst disk-usage viewer for Linux.
Drag a wedge to trash, click to descend, scan whole disk as admin."""
section = "utility"
priority = "optional"
# $auto only sees ELF NEEDED entries; winit/glow dlopen the X11/Wayland/GL
# stack at runtime, so those must be declared by hand (verified by startup
# crashes on minimal X11 installs: libxkbcommon-x11, libXi).
depends = "$auto, libx11-6, libxcursor1, libxrandr2, libxi6, libxkbcommon0, libxkbcommon-x11-0, libwayland-client0, libwayland-cursor0, libwayland-egl1, libegl1, libgl1"
assets = [
    ["target/release/disksun",           "usr/bin/",                                  "755"],
    ["contrib/disksun.desktop",          "usr/share/applications/",                   "644"],
    ["contrib/disksun.svg",              "usr/share/icons/hicolor/scalable/apps/",    "644"],
    ["contrib/disksun-launch.sh",        "usr/bin/disksun-launch",                    "755"],
    ["README.md",                        "usr/share/doc/disksun/README",              "644"],
]

# ---- cargo-generate-rpm ---------------------------------------------------
# Fedora/RHEL packaging metadata. Build with:
#   cargo generate-rpm --target <TARGET>
# Output: target/<TARGET>/generate-rpm/*.rpm
[package.metadata.generate-rpm]
license = "GPL-3.0-or-later"
summary = "interactive pie/sunburst disk-usage viewer"
assets = [
    { source = "target/release/disksun",    dest = "/usr/bin/disksun",                                     mode = "755" },
    { source = "contrib/disksun.desktop",   dest = "/usr/share/applications/disksun.desktop",              mode = "644" },
    { source = "contrib/disksun.svg",       dest = "/usr/share/icons/hicolor/scalable/apps/disksun.svg",   mode = "644" },
    { source = "contrib/disksun-launch.sh", dest = "/usr/bin/disksun-launch",                              mode = "755" },
    { source = "README.md",                 dest = "/usr/share/doc/disksun/README",                        mode = "644", doc = true },
    { source = "LICENSE",                   dest = "/usr/share/doc/disksun/LICENSE",                       mode = "644", doc = true },
]
auto-req = "builtin"

# builtin auto-req only sees ELF NEEDED entries; the dlopen'd GUI stack
# must be declared by hand (same reason as the deb depends above).
[package.metadata.generate-rpm.requires]
libX11 = "*"
libXcursor = "*"
libXrandr = "*"
libXi = "*"
libxkbcommon = "*"
"libxkbcommon-x11" = "*"
"libwayland-client" = "*"
"libwayland-cursor" = "*"
"libwayland-egl" = "*"
"libglvnd-egl" = "*"
"libglvnd-glx" = "*"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "glow",
    "wayland",
    "x11",
    "default_fonts",
] }
libc = "0.2"

[profile.release]
opt-level = 2
lto = "thin"
